# xmusic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.nxdk  Makefile.psp  MakefileWin32  MakefileWin64  README.md  main.cpp  player.c  player.cpp  sdlFilePicker.h  sdlFilePicker.hpp
.github/workflows/: c-cpp.yml
Binaries/: XMusic
implementations/: README.md
implementations/PSP/: player_PSP_pspaudio.cpp  player_PSP_pspaudio.h  sourcePicker_PSP_sceio.cpp  system_PSP.cpp  system_PSP.h
implementations/hardware/SDL/PSP/: player_hardware_SDL_mixer.cpp  player_hardware_SDL_mixer.h  sourcePicker_hardware_SDL_sceio.cpp  sourcePicker_hardware_SDL_sceio.h  system_hardware_SDL.cpp  system_hardware_SDL.h
implementations/software/SDL/standard/: player_software_SDL_mixer.cpp  player_software_SDL_mixer.h  sourcePicker_software_SDL_FilesystemX.cpp  sourcePicker_software_SDL_FilesystemX.h  system_software_SDL.cpp  system_software_SDL.h
